<resources>
    <string name="app_name" translatable="false">DO Tracking</string>
    <string name="login">Log in</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have account ?</string>
    <string name="sign_up">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="database">Database</string>
    <string name="transaction">Transaction</string>
    <string name="synchronize">Synchronize</string>
    <string name="courier">Courier</string>
    <string name="report">Report</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="database_used">Database Used</string>
    <string name="example_db">Example.db</string>
    <string name="change">Change</string>
    <string name="set_ip_address">Set IP Address</string>
</resources>
